stop duct-taping rhs spacing issue

--- a/styles/barmenu/datemenu/calendar.scss
+++ b/styles/barmenu/datemenu/calendar.scss
@@ -1,5 +1,5 @@
 .Calendar {
-	margin: 2rem 0.25rem 0 1rem;
+	margin-top: 2rem;
 	min-width: 10rem;
 
 	.Header {
