--- a/styles/barmenu/datemenu/date.scss
+++ b/styles/barmenu/datemenu/date.scss
@@ -1,6 +1,6 @@
 .Date {
 	margin-top: 1rem;
-	margin-left: 1.5rem;
+	margin-left: 1rem;
 
 	.Dotw {
 		font-size: 1.25rem;
