--- a/styles/barmenu/datemenu/events.scss
+++ b/styles/barmenu/datemenu/events.scss
@@ -1,6 +1,6 @@
 .EventsBox {
 	background-color: $Layer1;
-	margin: 1rem 0 0 calc(1rem - 4px);
+	margin-top: 1rem;
 	padding: 1rem;
 	border-radius: 0.5rem;
 
